examples/type_system/failing/69_hm_typed_let_infix_compile_mismatch.flx
// HM hardening: known invalid infix in typed let should fail at compile time.

fn old(v) {
    v
}

fn main() {
    let x = old("oops")
    let y: Int = x + 1
    y
}
